--- a/pages/16029.html
+++ b/pages/16029.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,10 +307,14 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Věra Trnková is a pure <a class='existingWikiWord' href='/nlab/show/category+theory'>category theorist</a>. She was a student of <a class='existingWikiWord' href='/nlab/show/Eduard+%C4%8Cech'>Eduard Čech</a>. Her students include <a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Ad%C3%A1mek'>Jiří Adámek</a>.</p>
+    <p>Věra Trnková (1934 - 2018) was a pure <a class='existingWikiWord' href='/nlab/show/category+theory'>category theorist</a>. She was a student of <a class='existingWikiWord' href='/nlab/show/Eduard+%C4%8Cech'>Eduard Čech</a>. The list of her students includes <a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Ad%C3%A1mek'>Jiří Adámek</a>, Jiří Velebil, Libor Barto, Václav Koubek.</p>
 
 <ul>
 <li><a href='http://www.karlin.mff.cuni.cz/~trnkova/'>webpage</a></li>
+
+<li><a href='https://www.mff.cuni.cz/verejnost/konalo-se/2018-05-trnkova/'>short obituary (in Czech)</a></li>
+
+<li>J. Adámek, M. Katětov: Věra Trnková’s unbelievable 60, in Mathematica Bohemica <a href='http://dml.cz/dmlcz/126082'>dml.cz</a>, 1994.</li>
 </ul>
 
 <h2 id='related_entries'>related entries</h2>
@@ -327,19 +330,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2015 16:53:52 
-  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
-  (67.81.95.215)
+  <p>
+  Last revised on May 31, 2018 at 09:38:10.
+  See the <a href="https://ncatlab.org/nlab/history/Věra Trnková" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/V%C4%9Bra+Trnkov%C3%A1" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/V%C4%9Bra+Trnkov%C3%A1/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/V%C4%9Bra+Trnkov%C3%A1" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/V%C4%9Bra+Trnkov%C3%A1" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/V%C4%9Bra+Trnkov%C3%A1" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/V%C4%9Bra+Trnkov%C3%A1/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/V%C4%9Bra+Trnkov%C3%A1" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/V%C4%9Bra+Trnkov%C3%A1" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Věra Trnková/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/V%C4%9Bra+Trnkov%C3%A1" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/V%C4%9Bra+Trnkov%C3%A1" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/V%C4%9Bra+Trnkov%C3%A1" id="view_source" rel="nofollow">Source</a>
