--- a/pages/1812.html
+++ b/pages/1812.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/7248/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -536,27 +535,27 @@ margin-left: 0em;
 
 <h2 id='bnabous_definition'>Bénabou’s definition</h2>
 
-<p>Jean Bénabou&#39;s original definition was that a <strong>cosmos</strong> <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/complete+category'>complete</a> and <a class='existingWikiWord' href='/nlab/show/cocomplete+category'>cocomplete</a> <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a>. This is an ideal situation for studying categories <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> over <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
+<p>Jean Bénabou&#39;s original definition was that a <strong>cosmos</strong> <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/complete+category'>complete</a> and <a class='existingWikiWord' href='/nlab/show/cocomplete+category'>cocomplete</a> <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed</a> <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+category'>symmetric monoidal category</a>. This is an ideal situation for studying categories <a class='existingWikiWord' href='/nlab/show/enriched+category'>enriched</a> over <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>.</p>
 
 <h2 id='streets_fibrational_cosmoi'>Street’s “fibrational cosmoi”</h2>
 
-<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a> has taken a different tack, defining a “cosmos” to be the collection of (enriched) categories and relevant structure for doing category theory, rather than the “base” category <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> over which the enrichment occurs.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a> has taken a different tack, defining a “cosmos” to be the collection of (enriched) categories and relevant structure for doing category theory, rather than the “base” category <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> over which the enrichment occurs.</p>
 
-<p>In his paper “Elementary cosmoi,” Street defined a <strong>(fibrational) cosmos</strong> to be a 2-category in which internal <a class='existingWikiWord' href='/nlab/show/Grothendieck+fibration'>fibrations</a> are well-behaved and representable by a structure of “presheaf objects” (later realized to be a special sort of <span class='newWikiWord'>Yoneda structure<a href='/nlab/new/Yoneda+structure'>?</a></span>). Note that while this includes <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math>, it does <em>not</em> include <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math> for non-cartesian <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, since internal fibrations are poorly behaved there. The definition is given in the paper “Cosmoi of internal categories”: a fibrational cosmos is a 2-category <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> such that</p>
+<p>In his paper “Elementary cosmoi,” Street defined a <strong>(fibrational) cosmos</strong> to be a 2-category in which internal <a class='existingWikiWord' href='/nlab/show/Grothendieck+fibration'>fibrations</a> are well-behaved and representable by a structure of “presheaf objects” (later realized to be a special sort of <a class='existingWikiWord' href='/nlab/show/Yoneda+structure'>Yoneda structure</a>). Note that while this includes <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math>, it does <em>not</em> include <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Cat</mi></mrow><annotation encoding='application/x-tex'>Cat</annotation></semantics></math> for non-cartesian <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>, since internal fibrations are poorly behaved there. The definition is given in the paper “Cosmoi of internal categories”: a fibrational cosmos is a 2-category <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math> such that</p>
 
 <ul>
-<li>finite limits exist in <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>;</li>
+<li>finite limits exist in <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi></mrow><annotation encoding='application/x-tex'>K</annotation></semantics></math>;</li>
 
-<li>there is a 2-adjunction <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>P</mi> <mo>*</mo></msup><mo>:</mo><mi>K</mi><mo>⇆</mo><msup><mi>K</mi> <mtext>coop</mtext></msup><mo>:</mo><mi>P</mi></mrow><annotation encoding='application/x-tex'>P^* : K \leftrightarrows K^{\text{coop}} : P</annotation></semantics></math>;</li>
+<li>there is a 2-adjunction <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>P</mi> <mo>*</mo></msup><mo>:</mo><mi>K</mi><mo>⇆</mo><msup><mi>K</mi> <mtext>coop</mtext></msup><mo>:</mo><mi>P</mi></mrow><annotation encoding='application/x-tex'>P^* : K \leftrightarrows K^{\text{coop}} : P</annotation></semantics></math>;</li>
 
-<li>each object <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> admits a discrete fibration from <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PA</mi></mrow><annotation encoding='application/x-tex'>PA</annotation></semantics></math> satisfying two technical properties.</li>
+<li>each object <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> admits a discrete fibration from <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PA</mi></mrow><annotation encoding='application/x-tex'>PA</annotation></semantics></math> satisfying two technical properties.</li>
 </ul>
 
-<p>The objects <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PA</mi></mrow><annotation encoding='application/x-tex'>PA</annotation></semantics></math> are the “presheaf objects” that represent fibrations.</p>
+<p>The objects <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>PA</mi></mrow><annotation encoding='application/x-tex'>PA</annotation></semantics></math> are the “presheaf objects” that represent fibrations.</p>
 
 <h2 id='streets_second_definition'>Street’s second definition</h2>
 
-<p>In his paper “Cauchy characterization of enriched categories,” Street instead defined a cosmos to be a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> that “behaves like the 2-category <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>Mod</annotation></semantics></math> of enriched categories and <a class='existingWikiWord' href='/nlab/show/profunctor'>profunctors</a>”. The precise definition: a cosmos is a 2-category (or <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a>) such that:</p>
+<p>In his paper “Cauchy characterization of enriched categories,” Street instead defined a cosmos to be a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> that “behaves like the 2-category <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math>-<math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mod</mi></mrow><annotation encoding='application/x-tex'>Mod</annotation></semantics></math> of enriched categories and <a class='existingWikiWord' href='/nlab/show/profunctor'>profunctors</a>”. The precise definition: a cosmos is a 2-category (or <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategory</a>) such that:</p>
 
 <ul>
 <li>Small (<a class='existingWikiWord' href='/nlab/show/2-limit'>weak, or bi-</a>) <a class='existingWikiWord' href='/nlab/show/coproduct'>coproduct</a>s exist.</li>
@@ -574,16 +573,22 @@ margin-left: 0em;
 
 <h2 id='related_notions'>Related notions</h2>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/infinity-cosmos'>infinity-cosmos</a> is a “good place in which to do higher category theory” as axiomatized by Riehl and Verity in their work on the foundations of <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>- and <math class='maruku-mathml' display='inline' id='mathml_93343099d3945c21e9ce2324ef705254dcd9d696_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,n)</annotation></semantics></math>-category theory.</p>
+<p>An <a class='existingWikiWord' href='/nlab/show/infinity-cosmos'>infinity-cosmos</a> is a “good place in which to do higher category theory” as axiomatized by Riehl and Verity in their work on the foundations of <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>- and <math class='maruku-mathml' display='inline' id='mathml_f8fedf1adc10bd06b0b1d25588f149c4430e3969_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,n)</annotation></semantics></math>-category theory.</p>
 
 <h2 id='bibliography'>Bibliography</h2>
 
 <ul>
-<li>Street, Ross. “Elementary cosmoi I.” <em>Category Seminar</em>. Springer, Berlin, Heidelberg, 1974.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>Elementary cosmoi I. <em>Category Seminar</em>. Springer, Berlin, Heidelberg, 1974.</em></p>
+</li>
 
-<li>Street, Ross. “Cosmoi of internal categories.” Transactions of the American Mathematical Society 258.2 (1980): 271-318.</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>Cosmoi of internal categories</em>, Transactions of the American Mathematical Society 258.2 (1980): 271-318.</p>
+</li>
 
-<li>Street, Ross. “Cauchy characterization of enriched categories.” Rend. Sem. Mat. Fis. Milano 51 (1981): 217-233. (<a href='http://emis.ams.org/journals/TAC/reprints/articles/4/tr4.pdf'>pdf</a>)</li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Ross+Street'>Ross Street</a>, <em>Cauchy characterization of enriched categories</em>, Rend. Sem. Mat. Fis. Milano 51 (1981): 217-233. (<a href='http://emis.ams.org/journals/TAC/reprints/articles/4/tr4.pdf'>pdf</a>)</p>
+</li>
 </ul>
 
 <p>
@@ -595,19 +600,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 25, 2017 15:28:51 
-  by <a class="existingWikiWord" href="/nlab/show/Fosco+Loregian">Fosco Loregian</a>
-  (84.242.100.14)
+  <p>
+  Last revised on June  5, 2018 at 08:25:09.
+  See the <a href="https://ncatlab.org/nlab/history/cosmos" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmos/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/cosmos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/cosmos" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmos/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/cosmos" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmos" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/cosmos/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/cosmos" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/cosmos" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/cosmos" id="view_source" rel="nofollow">Source</a>
